--- a/index.html
+++ b/index.html
@@ -3,65 +3,56 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Araç Analiz PRO</title>
+<title>Araç Analiz Pro</title>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.min.js"></script>
+<link rel="icon" href="data:,">
+
+<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <style>
 body{
 font-family:Arial;
+margin:0;
 background:linear-gradient(135deg,#0a3cff,#0ad0ff);
 color:white;
 text-align:center;
-margin:0;
 }
-
-.container{
-max-width:420px;
-margin:auto;
-padding:15px;
-}
-
 .box{
 background:white;
 color:black;
+width:95%;
+max-width:420px;
+margin:20px auto;
 padding:20px;
-border-radius:14px;
-margin-top:20px;
-box-shadow:0 10px 30px rgba(0,0,0,0.2);
+border-radius:12px;
 }
-
-input,button{
+input,select,button{
 width:100%;
 padding:12px;
 margin:6px 0;
-border-radius:8px;
-border:none;
-font-size:15px;
+font-size:16px;
 }
-
 button{
 background:#0a3cff;
 color:white;
+border:none;
 cursor:pointer;
-font-weight:bold;
+border-radius:6px;
 }
-
 .hidden{display:none}
+img{max-width:100%;border-radius:8px;margin-top:10px}
 </style>
 </head>
 
 <body>
 
-<div class="container">
-
-<h1>Araç Analiz PRO</h1>
+<h1>Araç Analiz Pro</h1>
 
 <div class="box" id="authBox">
 <h3>Kayıt / Giriş</h3>
-<input id="email" placeholder="Email" autocomplete="off">
-<input id="password" type="password" placeholder="Şifre" autocomplete="new-password">
+<input id="email" placeholder="Email">
+<input id="password" type="password" placeholder="Şifre">
 <button onclick="register()">Kayıt Ol</button>
 <button onclick="login()">Giriş Yap</button>
 </div>
@@ -69,54 +60,115 @@ font-weight:bold;
 <div class="box hidden" id="userPanel">
 <h3>Plaka Sorgu</h3>
 <input id="plate" placeholder="Plaka">
-<button onclick="analyze()">Analiz Yap</button>
+
+<h4>Ekspertiz Yükle</h4>
+<select id="brand"></select>
+<select id="model"></select>
+<select id="year"></select>
+<input type="file" id="file">
+
+<button onclick="uploadExpertiz()">Ekspertiz Gönder</button>
+<button onclick="analyze()">Analiz Oluştur</button>
 <button onclick="logout()">Çıkış</button>
+
 <div id="result"></div>
 </div>
 
 <div class="box hidden" id="adminPanel">
 <h3>Admin Panel</h3>
 <input id="a_plate" placeholder="Plaka">
-<input id="a_brand" placeholder="Marka">
-<input id="a_model" placeholder="Model">
-<input id="a_year" placeholder="Yıl">
+<select id="a_brand"></select>
+<select id="a_model"></select>
+<select id="a_year"></select>
 <input id="a_km" placeholder="KM">
-<input id="a_exp" placeholder="Ekspertiz">
 <button onclick="addVehicle()">Araç Kaydet</button>
 </div>
 
-</div>
-
 <script>
+
 const SUPABASE_URL="https://lxuqpziqyrrwtzcksgwz.supabase.co";
 const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imx4dXFwemlxeXJyd3R6Y2tzZ3d6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA1NDM4MzMsImV4cCI6MjA4NjExOTgzM30.WOwK1D4eDNyPxYOe7HUuwndgPFQgmdmCcRxWsfyTSps";
-const db=supabase.createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
+
+const db = supabase.createClient(SUPABASE_URL,SUPABASE_ANON_KEY);
+
+const ADMIN_EMAIL="mslmcanlii@gmail.com";
 
 let currentUser=null;
 
-window.onload=()=>{ document.getElementById("email").value=""; }
+const vehicleData={
+"BMW":["3 Serisi","5 Serisi","X5"],
+"Mercedes":["C200","E200","S500"],
+"Toyota":["Corolla","Camry","Yaris"],
+"Volkswagen":["Passat","Golf","Polo"]
+};
+
+function fillBrands(){
+let brand=document.getElementById("brand");
+let a_brand=document.getElementById("a_brand");
+brand.innerHTML="";
+a_brand.innerHTML="";
+for(let b in vehicleData){
+brand.innerHTML+=<option>${b}</option>;
+a_brand.innerHTML+=<option>${b}</option>;
+}
+fillModels();
+}
+
+function fillModels(){
+let b=document.getElementById("brand").value;
+let a_b=document.getElementById("a_brand").value;
+
+let model=document.getElementById("model");
+let a_model=document.getElementById("a_model");
+
+model.innerHTML="";
+a_model.innerHTML="";
+
+vehicleData[b].forEach(m=>model.innerHTML+=<option>${m}</option>);
+vehicleData[a_b].forEach(m=>a_model.innerHTML+=<option>${m}</option>);
+
+fillYears();
+}
+
+function fillYears(){
+let year=document.getElementById("year");
+let a_year=document.getElementById("a_year");
+year.innerHTML="";
+a_year.innerHTML="";
+for(let y=2025;y>=1990;y--){
+year.innerHTML+=<option>${y}</option>;
+a_year.innerHTML+=<option>${y}</option>;
+}
+}
 
 async function register(){
-let email=emailVal();
-let password=passVal();
+let email=emailEl().value;
+let password=passwordEl().value;
 
 let {error}=await db.auth.signUp({email,password});
 
-if(error){ alert(error.message); return; }
-
-alert("Kayıt başarılı. Mail onayı yapıp giriş yap.");
+if(error) alert(error.message);
+else alert("Kayıt başarılı. Email onaylayıp giriş yapın.");
 }
 
 async function login(){
-let email=emailVal();
-let password=passVal();
+let email=emailEl().value;
+let password=passwordEl().value;
 
 let {data,error}=await db.auth.signInWithPassword({email,password});
 
-if(error){ alert(error.message); return; }
+if(error){alert(error.message);return;}
 
 currentUser=data.user;
-initUser();
+
+document.getElementById("authBox").classList.add("hidden");
+document.getElementById("userPanel").classList.remove("hidden");
+
+if(currentUser.email===ADMIN_EMAIL){
+document.getElementById("adminPanel").classList.remove("hidden");
+}
+
+fillBrands();
 }
 
 async function logout(){
@@ -124,66 +176,74 @@ await db.auth.signOut();
 location.reload();
 }
 
-async function initUser(){
-hide("authBox");
-show("userPanel");
+function emailEl(){return document.getElementById("email")}
+function passwordEl(){return document.getElementById("password")}
 
-let {data:profile}=await db.from("profiles").select("*").eq("id",currentUser.id).single();
+async function uploadExpertiz(){
+let file=document.getElementById("file").files[0];
+if(!file){alert("Dosya seç");return;}
 
-if(profile?.is_admin) show("adminPanel");
+let path=currentUser.id+"/"+Date.now()+".jpg";
+
+await db.storage.from("expertiz").upload(path,file);
+
+await db.from("expertiz").insert({
+user_id:currentUser.id,
+plate:document.getElementById("plate").value,
+brand:document.getElementById("brand").value,
+model:document.getElementById("model").value,
+year:document.getElementById("year").value,
+image:path
+});
+
+alert("Ekspertiz yüklendi");
 }
 
 async function analyze(){
 let plate=document.getElementById("plate").value;
-let {data,error}=await db.from("vehicles").select("*").eq("plate",plate).single();
 
-if(error||!data){ alert("Araç bulunamadı"); return; }
+let {data}=await db.from("expertiz").select("*").eq("plate",plate);
 
-let score=calcScore(data.year,data.km);
+if(!data || data.length===0){
+alert("Kayıt yok");
+return;
+}
+
+let e=data[0];
+
+let {data:url}=db.storage.from("expertiz").getPublicUrl(e.image);
 
 document.getElementById("result").innerHTML=`
-<h3>${data.brand} ${data.model}</h3>
-Güven Puanı: ${score}<br>
-KM: ${data.km}<br>
-Ekspertiz: ${data.expertiz}<br>
-<button onclick="pdf('${data.brand}','${data.model}','${score}')">PDF İndir</button>
+<h3>${e.brand} ${e.model}</h3>
+Yıl: ${e.year}<br>
+<img src="${url.publicUrl}">
+<button onclick="downloadPDF('${e.brand}','${e.model}','${e.year}')">PDF İndir</button>
 `;
+}
+
+function downloadPDF(brand,model,year){
+const {jsPDF}=window.jspdf;
+let doc=new jsPDF();
+doc.text("Araç Analiz Raporu",20,20);
+doc.text("Araç: "+brand+" "+model,20,40);
+doc.text("Yıl: "+year,20,60);
+doc.save("rapor.pdf");
 }
 
 async function addVehicle(){
 await db.from("vehicles").insert({
-plate:v("a_plate"),
-brand:v("a_brand"),
-model:v("a_model"),
-year:v("a_year"),
-km:v("a_km"),
-expertiz:v("a_exp")
+plate:document.getElementById("a_plate").value,
+brand:document.getElementById("a_brand").value,
+model:document.getElementById("a_model").value,
+year:document.getElementById("a_year").value,
+km:document.getElementById("a_km").value
 });
 alert("Araç eklendi");
 }
 
-function calcScore(year,km){
-let score=100;
-let age=new Date().getFullYear()-year;
-score-=age*2;
-if(km>200000)score-=20;
-return Math.max(score,10);
-}
+document.getElementById("brand").onchange=fillModels;
+document.getElementById("a_brand").onchange=fillModels;
 
-function pdf(brand,model,score){
-const {jsPDF}=window.jspdf;
-let doc=new jsPDF();
-doc.text("Araç Analiz PRO",20,20);
-doc.text(brand+" "+model,20,40);
-doc.text("Güven: "+score,20,60);
-doc.save("rapor.pdf");
-}
-
-function v(id){return document.getElementById(id).value}
-function emailVal(){return v("email")}
-function passVal(){return v("password")}
-function show(id){document.getElementById(id).classList.remove("hidden")}
-function hide(id){document.getElementById(id).classList.add("hidden")}
 </script>
 
 </body>
